--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,10 +10,9 @@ edition = "2021"
 anyhow = { version = "1.0.40", default-features = false }
 itertools = { version = "0.10.0", default-features = false }
 num = { version = "0.4", default-features = false }
-# plonky2 = "0.1.4"
-plonky2 = { git = "https://github.com/ZeroKPunk/plonky2.git", branch = "main", default-features = false, features = ["gate_testing", "rand_chacha", "std", "parallel"]}
-
+plonky2 = { git = "https://github.com/Orbiter-Finance/plonky2.git", branch = "demo_use_sppark", default-features = true}
 [dev-dependencies]
 rand = { version = "0.8.4", default-features = false, features = ["getrandom"] }
-# plonky2 = "0.1.4"
-plonky2 = { git = "https://github.com/ZeroKPunk/plonky2.git", branch = "main", default-features = false, features = ["gate_testing", "rand_chacha", "std", "parallel"]}
+
+[patch."https://github.com/Orbiter-Finance/plonky2.git"]
+plonky2 = { path = "../plonky2/plonky2"}
